Underline the surname

--- a/style.css
+++ b/style.css
@@ -59,6 +59,9 @@ a:hover {
 .semibold {
     font-weight: 600;
 }
+.underline {
+    text-decoration: underline;
+}
 
 /* Title */
 #title .profileimage {
