--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -20,7 +20,7 @@
 <body>
 <div id="title">
 <div class="name">Bernard <span class="underline">Teo</span> Zhi Yi</div>
-<div><span class="keyname">Email: </span><a href="mailto:bernardteo@u.nus.edu">bernardteo@u.nus.edu</a> | <span class="keyname">GitHub: </span><a href="https://github.com/btzy">btzy</a> | <span class="keyname">LinkedIn: </span><a href="https://www.linkedin.com/in/bernard-teo/">bernard-teo</a></div>
+<div><span class="keyname">Email: </span><a href="mailto:bernardteo@u.nus.edu">bernardteo@u.nus.edu</a> | <span class="keyname">GitHub: </span><a href="https://github.com/btzy">btzy</a> | <span class="keyname">LinkedIn: </span><a href="https://www.linkedin.com/in/bernard-teo/">bernard-teo</a> | <span class="keyname">Stack Overflow: </span><a href="https://stackoverflow.com/users/1021959">Bernard</a></div>
 </div>
 <hr/>
 
