Fix in-page title for module reviews

--- a/_layouts/nus_module_review.html
+++ b/_layouts/nus_module_review.html
@@ -1,9 +1,8 @@
 ---
 layout: default
-title: Review
 ---
 
 <div>
-<p><span class="keyname">{{ page.name }} Review</span></p>
+<p><span class="keyname">{{ page.title }}</span></p>
 {{ content }}
 </div>
