--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -13,7 +13,7 @@
 
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>{{ page.title }}</title>
+<title>{% if page.title %}{{ page.title }} &mdash; {% endif %}Bernard Teo Zhi Yi</title>
 <link rel="stylesheet" type="text/css" href="/style.css" />
 </head>
 
