--- a/_layouts/blog.html
+++ b/_layouts/blog.html
@@ -5,5 +5,6 @@ layout: default
 <div class="blog">
 <h1>{{ page.title }}</h1>
 <p class="date">{{ page.date | date: "%-d %B %Y" }}</p>
+<p>&nbsp;</p>
 {{ content }}
 </div>
